src/auryn/air/snapshots/auryn__auryn__air__tests__reassignment.snap
---
source: src/auryn/air/mod.rs
expression: "compile_wrapped(r#\"\n            let a: I32 = 0\n            if true {\n                let a: I32 = 1\n            }\n            a\n            \"#)"
---
(
    Air {
        functions: {
            AirFunctionId(
                AirStaticValueId(
                    SyntaxId {
                        file_id: Some(
                            FileId(
                                1,
                            ),
                        ),
                        number: Some(
                            4,
                        ),
                    },
                ),
            ): AirFunction {
                type: Computed(
                    FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: Some(
                                    4,
                                ),
                            },
                            kind: "auryn::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                ),
                unresolved_type: Function {
                    parameters_reference: SyntaxId {
                        file_id: Some(
                            FileId(
                                1,
                            ),
                        ),
                        number: Some(
                            84442493013200,
                        ),
                    },
                    parameters: [],
                    return_type: None,
                    reference: UserDefined(
                        AirFunctionId(
                            AirStaticValueId(
                                SyntaxId {
                                    file_id: Some(
                                        FileId(
                                            1,
                                        ),
                                    ),
                                    number: Some(
                                        4,
                                    ),
                                },
                            ),
                        ),
                    ),
                },
                ident: "main",
                blocks: {
                    AirBlockId(
                        0,
                    ): AirBlock {
                        nodes: [
                            AirNode {
                                id: SyntaxId {
                                    file_id: Some(
                                        FileId(
                                            1,
                                        ),
                                    ),
                                    number: Some(
                                        225179981368527,
                                    ),
                                },
                                kind: Assignment(
                                    Assignment {
                                        target: AirLocalValueId(
                                            0,
                                        ),
                                        expected_type: Some(
                                            Ident(
                                                SyntaxId {
                                                    file_id: Some(
                                                        FileId(
                                                            1,
                                                        ),
                                                    ),
                                                    number: Some(
                                                        226917481224765,
                                                    ),
                                                },
                                                "I32",
                                            ),
                                        ),
                                        expression: AirExpression {
                                            id: SyntaxId {
                                                file_id: Some(
                                                    FileId(
                                                        1,
                                                    ),
                                                ),
                                                number: Some(
                                                    227959981138506,
                                                ),
                                            },
                                            type: Computed(
                                                I32,
                                            ),
                                            kind: Constant(
                                                Number(
                                                    0,
                                                ),
                                            ),
                                        },
                                    },
                                ),
                            },
                        ],
                        finalizer: Branch {
                            value: AirExpression {
                                id: SyntaxId {
                                    file_id: Some(
                                        FileId(
                                            1,
                                        ),
                                    ),
                                    number: Some(
                                        235344355527523,
                                    ),
                                },
                                type: Computed(
                                    Bool,
                                ),
                                kind: Constant(
                                    Boolean(
                                        true,
                                    ),
                                ),
                            },
                            pos_block: AirBlockId(
                                1,
                            ),
                            neg_block: AirBlockId(
                                2,
                            ),
                        },
                    },
                    AirBlockId(
                        3,
                    ): AirBlock {
                        nodes: [
                            AirNode {
                                id: SyntaxId {
                                    file_id: Some(
                                        FileId(
                                            1,
                                        ),
                                    ),
                                    number: Some(
                                        243944979815904,
                                    ),
                                },
                                kind: Expression(
                                    AirExpression {
                                        id: SyntaxId {
                                            file_id: Some(
                                                FileId(
                                                    1,
                                                ),
                                            ),
                                            number: Some(
                                                243944979815904,
                                            ),
                                        },
                                        type: Computed(
                                            I32,
                                        ),
                                        kind: Variable(
                                            Local(
                                                AirLocalValueId(
                                                    0,
                                                ),
                                            ),
                                        ),
                                    },
                                ),
                            },
                        ],
                        finalizer: Return(
                            Null(
                                SyntaxId {
                                    file_id: Some(
                                        FileId(
                                            1,
                                        ),
                                    ),
                                    number: Some(
                                        225179981368525,
                                    ),
                                },
                            ),
                        ),
                    },
                    AirBlockId(
                        1,
                    ): AirBlock {
                        nodes: [
                            AirNode {
                                id: SyntaxId {
                                    file_id: Some(
                                        FileId(
                                            1,
                                        ),
                                    ),
                                    number: Some(
                                        236908105398135,
                                    ),
                                },
                                kind: Assignment(
                                    Assignment {
                                        target: AirLocalValueId(
                                            1,
                                        ),
                                        expected_type: Some(
                                            Ident(
                                                SyntaxId {
                                                    file_id: Some(
                                                        FileId(
                                                            1,
                                                        ),
                                                    ),
                                                    number: Some(
                                                        236980501225478,
                                                    ),
                                                },
                                                "I32",
                                            ),
                                        ),
                                        expression: AirExpression {
                                            id: SyntaxId {
                                                file_id: Some(
                                                    FileId(
                                                        1,
                                                    ),
                                                ),
                                                number: Some(
                                                    237023938721882,
                                                ),
                                            },
                                            type: Computed(
                                                I32,
                                            ),
                                            kind: Constant(
                                                Number(
                                                    1,
                                                ),
                                            ),
                                        },
                                    },
                                ),
                            },
                        ],
                        finalizer: Goto(
                            AirBlockId(
                                3,
                            ),
                        ),
                    },
                    AirBlockId(
                        2,
                    ): AirBlock {
                        nodes: [],
                        finalizer: Goto(
                            AirBlockId(
                                3,
                            ),
                        ),
                    },
                },
            },
        },
        ..
    },
    Diagnostics {
        diagnostics: [],
    },
)
