src/auryn/air/snapshots/auryn__auryn__air__tests__struct.snap
---
source: src/auryn/air/mod.rs
expression: "compile(r#\"\n            struct Foo {\n                a: I32,\n                b: []Foo\n            }\n\n            fn main() {}\n            \"#)"
---
(
    Air {
        globals: Globals {
            functions: {
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: Some(
                                187649984473768,
                            ),
                        },
                    ),
                ): AirFunction {
                    type: Computed(
                        FunctionItem(
                            TypeId {
                                id: SyntaxId {
                                    file_id: Some(
                                        FileId(
                                            1,
                                        ),
                                    ),
                                    number: Some(
                                        187649984473768,
                                    ),
                                },
                                kind: "auryn::auryn::air::typecheck::types::FunctionItemType",
                            },
                        ),
                    ),
                    unresolved_type: Function {
                        parameters_reference: SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: Some(
                                201053554793321,
                            ),
                        },
                        parameters: [],
                        return_type: None,
                        reference: UserDefined(
                            AirFunctionId(
                                AirStaticValueId(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: Some(
                                            187649984473768,
                                        ),
                                    },
                                ),
                            ),
                        ),
                    },
                    ident: "main",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: Some(
                                            209989268339689,
                                        ),
                                    },
                                ),
                            ),
                        },
                    },
                },
            },
            types: {
                Struct(
                    TypeId {
                        id: SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: Some(
                                69499994249545,
                            ),
                        },
                        kind: "auryn::auryn::air::typecheck::types::StructType",
                    },
                ): Computed(
                    Struct(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: Some(
                                    69499994249545,
                                ),
                            },
                            kind: "auryn::auryn::air::typecheck::types::StructType",
                        },
                    ),
                ),
                Module(
                    TypeId {
                        id: SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: Some(
                                1,
                            ),
                        },
                        kind: "auryn::auryn::air::typecheck::types::ModuleType",
                    },
                ): Computed(
                    Module(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: Some(
                                    1,
                                ),
                            },
                            kind: "auryn::auryn::air::typecheck::types::ModuleType",
                        },
                    ),
                ),
            },
            type_aliases: {},
            statics: {
                AirStaticValueId(
                    SyntaxId {
                        file_id: Some(
                            FileId(
                                1,
                            ),
                        ),
                        number: Some(
                            187649984473768,
                        ),
                    },
                ): Function(
                    AirFunctionId(
                        AirStaticValueId(
                            SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: Some(
                                    187649984473768,
                                ),
                            },
                        ),
                    ),
                ),
            },
        },
        ty_ctx: TypeContext {
            array_bounds: {},
            number_literals: {},
            arrays: {
                TypeId {
                    id: SyntaxId {
                        file_id: None,
                        number: Some(
                            2,
                        ),
                    },
                    kind: "auryn::auryn::air::typecheck::types::ArrayType",
                }: ArrayType {
                    element_type: Struct(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: Some(
                                    69499994249545,
                                ),
                            },
                            kind: "auryn::auryn::air::typecheck::types::StructType",
                        },
                    ),
                },
            },
            metas: {
                TypeId {
                    id: SyntaxId {
                        file_id: None,
                        number: Some(
                            3,
                        ),
                    },
                    kind: "auryn::auryn::air::typecheck::types::MetaType",
                }: MetaType {
                    inner: Module(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: Some(
                                    1,
                                ),
                            },
                            kind: "auryn::auryn::air::typecheck::types::ModuleType",
                        },
                    ),
                },
                TypeId {
                    id: SyntaxId {
                        file_id: None,
                        number: Some(
                            4,
                        ),
                    },
                    kind: "auryn::auryn::air::typecheck::types::MetaType",
                }: MetaType {
                    inner: Struct(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: Some(
                                    69499994249545,
                                ),
                            },
                            kind: "auryn::auryn::air::typecheck::types::StructType",
                        },
                    ),
                },
            },
            structurals: {
                TypeId {
                    id: SyntaxId {
                        file_id: None,
                        number: Some(
                            1,
                        ),
                    },
                    kind: "auryn::auryn::air::typecheck::types::StructuralType",
                }: StructuralType {
                    fields: [],
                },
            },
            structs: {
                TypeId {
                    id: SyntaxId {
                        file_id: Some(
                            FileId(
                                1,
                            ),
                        ),
                        number: Some(
                            69499994249545,
                        ),
                    },
                    kind: "auryn::auryn::air::typecheck::types::StructType",
                }: StructType {
                    ident: "Foo",
                    structural: StructuralType {
                        fields: [
                            (
                                "a",
                                I32,
                            ),
                            (
                                "b",
                                Array(
                                    TypeId {
                                        id: SyntaxId {
                                            file_id: None,
                                            number: Some(
                                                2,
                                            ),
                                        },
                                        kind: "auryn::auryn::air::typecheck::types::ArrayType",
                                    },
                                ),
                            ),
                        ],
                    },
                },
            },
            externs: {},
            modules: {
                TypeId {
                    id: SyntaxId {
                        file_id: Some(
                            FileId(
                                1,
                            ),
                        ),
                        number: Some(
                            1,
                        ),
                    },
                    kind: "auryn::auryn::air::typecheck::types::ModuleType",
                }: ModuleType {
                    name: "main",
                    members: {
                        "main": FunctionItem(
                            TypeId {
                                id: SyntaxId {
                                    file_id: Some(
                                        FileId(
                                            1,
                                        ),
                                    ),
                                    number: Some(
                                        187649984473768,
                                    ),
                                },
                                kind: "auryn::auryn::air::typecheck::types::FunctionItemType",
                            },
                        ),
                        "Foo": Meta(
                            TypeId {
                                id: SyntaxId {
                                    file_id: None,
                                    number: Some(
                                        4,
                                    ),
                                },
                                kind: "auryn::auryn::air::typecheck::types::MetaType",
                            },
                        ),
                    },
                },
            },
            function_items: {
                TypeId {
                    id: SyntaxId {
                        file_id: Some(
                            FileId(
                                1,
                            ),
                        ),
                        number: Some(
                            187649984473768,
                        ),
                    },
                    kind: "auryn::auryn::air::typecheck::types::FunctionItemType",
                }: FunctionItemType {
                    parameters: FunctionParameters {
                        parameters: [],
                        parameters_reference: SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: Some(
                                201053554793321,
                            ),
                        },
                    },
                    return_type: Structural(
                        TypeId {
                            id: SyntaxId {
                                file_id: None,
                                number: Some(
                                    1,
                                ),
                            },
                            kind: "auryn::auryn::air::typecheck::types::StructuralType",
                        },
                    ),
                    reference: UserDefined(
                        AirFunctionId(
                            AirStaticValueId(
                                SyntaxId {
                                    file_id: Some(
                                        FileId(
                                            1,
                                        ),
                                    ),
                                    number: Some(
                                        187649984473768,
                                    ),
                                },
                            ),
                        ),
                    ),
                },
            },
            intrinsics: {},
            special_types: SpecialTypes {
                unit: Structural(
                    TypeId {
                        id: SyntaxId {
                            file_id: None,
                            number: Some(
                                1,
                            ),
                        },
                        kind: "auryn::auryn::air::typecheck::types::StructuralType",
                    },
                ),
            },
            next_id: 5,
        },
    },
    Diagnostics {
        diagnostics: [],
    },
)
